--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,28 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(lse_xsens_mti)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+find_package(catkin REQUIRED COMPONENTS cereal_port gps_common nav_msgs roscpp sensor_msgs tf)
 
-rosbuild_init()
+catkin_package(
+ INCLUDE_DIRS src
+ LIBRARIES lse_xsens_mti
+ CATKIN_DEPENDS cereal_port gps_common nav_msgs roscpp sensor_msgs tf
+ DEPENDS system_lib
+)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+include_directories(
+  src
+  ${catkin_INCLUDE_DIRS}
+)
 
-#uncomment if you have defined messages
-#rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
+add_executable(mti_node
+  src/mti_node.cpp
+  src/MTi/MTi.cpp
+  src/MTi/MTMessage.cpp
+)
 
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
-
-rosbuild_add_executable(mti_node src/mti_node.cpp src/MTi/MTi.cpp src/MTi/MTMessage.cpp)
-target_link_libraries(mti_node cereal_port)
+target_link_libraries(mti_node
+  cereal_port
+  ${catkin_LIBRARIES}
+)
 
